# iris-cv

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  deploy-docs.yml
assets/: README.md
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: color.md  contours.md  core.md  dnn.md  drawing.md  edges.md  features.md  filters.md  histogram.md  hog.md  image.md  index.md  inpaint.md  kalman.md  morphology.md  noise.md  photo.md  stereo.md  stitching.md  threshold.md  tracking.md  video.md
docs/examples/: api-showcase.md  aruco-pose.md  barcode-detection.md  camera-calibration.md  canny.md  color-processing.md  contours.md  drawing.md  face-recognition.md  filters.md  generate-asset.md  gif-video.md  gui-windows.md  image-loading.md  image-sequence.md  image-utils.md  index.md  kmeans-clustering.md  morphology.md  ocr.md  onnx-inference.md  optical-flow.md  photo-processing.md  qr-detection.md  safetensors-loading.md  segmentation.md  stitching.md  threshold.md  tracking.md  video-frame-ops.md  video-metadata.md  video-processing.md
docs/guide/: camera.md  contours.md  detection.md  dnn.md  drawing.md  edges.md  examples.md  filters.md  getting-started.md  image.md  index.md  installation.md  introduction.md  morphology.md  tracking.md
docs/public/: sitemap.xml
examples/: api_showcase.rs  aruco_pose.rs  barcode_detection.rs  camera_calibration.rs  canny.rs  color_processing.rs  contours.rs  drawing.rs  face_recognition.rs  filters.rs  generate_assets.rs  gif_video.rs  gui_windows.rs  image_loading.rs  image_sequence.rs  image_utils.rs  kmeans_clustering.rs  morphology.rs  ocr.rs  onnx_inference.rs  optical_flow.rs  photo_processing.rs  qr_detection.rs  safetensors_loading.rs  segmentation.rs  stitching.rs  threshold.rs  tracking.rs  video_frame_ops.rs  video_metadata.rs  video_processing.rs
src/: error.rs  lib.rs  prelude.rs
src/aruco/: mod.rs
src/barcode/: mod.rs
src/burn/: mod.rs
src/camera/: calibration.rs  mod.rs
src/color/: mod.rs
src/contours/: mod.rs  shape_analysis.rs
src/core/: mat.rs  mod.rs  rng.rs  types.rs  utils.rs
src/dnn/: mod.rs
src/drawing/: font.rs  mod.rs
src/edges/: gradients.rs  mod.rs
src/face/: mod.rs
src/features/: matching.rs  mod.rs
src/filters/: bilateral.rs  mod.rs
src/gpu/: mod.rs
src/gui/: mod.rs
src/histogram/: mod.rs
src/hog/: mod.rs
src/image/: geometric.rs  io.rs  mod.rs  ops.rs
src/inpaint/: mod.rs
src/kalman/: mod.rs
src/ml/: mod.rs
src/morphology/: mod.rs  ops.rs
src/noise/: mod.rs
src/object_detection/: mod.rs
src/ocr/: mod.rs
src/optical_flow/: mod.rs
src/photo/: mod.rs  nlm.rs
src/qr/: mod.rs
src/segmentation/: components.rs  mod.rs  watershed.rs
src/simd/: mod.rs
src/stereo/: mod.rs
src/stitching/: mod.rs
src/threshold/: mod.rs
src/tracking/: mod.rs  subtractor.rs
src/utils/: mod.rs
src/video/: frame.rs  iterator.rs  metadata.rs  mod.rs  reader.rs  writer.rs
