[package]
name = "observers"
version = "0.0.0"
edition = "2024"
authors = ["Muhammad Fiaz <contact@muhammadfiaz.com>"]
license = "MIT"
description = "A fast computer vision library framework in Rust."
repository = "https://github.com/muhammad-fiaz/observers"
homepage = "https://muhammad-fiaz.github.io/observers"

[dependencies]
burn = { version = "0.21.0", features = ["std", "vision", "train"] }
image = "0.25.10"
thiserror = "2.0.18"
safetensors = { version = "0.8.0", optional = true }
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", optional = true }
gpui-component = { git = "https://github.com/longbridge/gpui-component", optional = true }
rayon = { version = "1.12.0", optional = true }

[features]
default = ["wgpu", "safetensors", "parallel"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
tch = ["burn/tch"]
ndarray = ["burn/ndarray"]
safetensors = ["dep:safetensors"]
gpui = ["dep:gpui", "dep:gpui-component"]
parallel = ["dep:rayon"]
