[package]
name = "iris"
version = "0.0.0"
edition = "2024"
authors = ["Muhammad Fiaz <contact@muhammadfiaz.com>"]
license = "MIT"
description = "A fast computer vision library framework in Rust."
repository = "https://github.com/muhammad-fiaz/iris"
homepage = "https://muhammad-fiaz.github.io/iris"
documentation = "https://docs.rs/iris"
readme = "README.md"
keywords = ["computer-vision", "image-processing", "deep-learning", "burn", "gpu"]
categories = ["computer-vision", "image-processing", "machine-learning", "parser-implementations"]

[dependencies]
burn = { version = "0.21.0", features = ["std", "vision", "train"] }
image = "0.25.10"
thiserror = "2.0.18"
safetensors = { version = "0.8.0", optional = true }
gpui = { version = "0.2.2", git = "https://github.com/zed-industries/zed", package = "gpui", optional = true }
gpui-component = { version = "0.5.1", git = "https://github.com/longbridge/gpui-component", optional = true }
rayon = "1.12.0"

[features]
default = ["ndarray", "safetensors"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
tch = ["burn/tch"]
ndarray = ["burn/ndarray"]
safetensors = ["dep:safetensors"]
gpui = ["dep:gpui", "dep:gpui-component"]

[[example]]
name = "api_showcase"
required-features = ["wgpu"]

[[example]]
name = "aruco_pose"
required-features = ["wgpu"]

[[example]]
name = "barcode_detection"
required-features = ["wgpu"]

[[example]]
name = "camera_calibration"
required-features = ["wgpu"]

[[example]]
name = "canny"
required-features = ["wgpu"]

[[example]]
name = "color_processing"
required-features = ["wgpu"]

[[example]]
name = "contours"
required-features = ["wgpu"]

[[example]]
name = "drawing"
required-features = ["wgpu"]

[[example]]
name = "face_recognition"
required-features = ["wgpu"]

[[example]]
name = "filters"
required-features = ["wgpu"]

[[example]]
name = "gui_windows"
required-features = ["wgpu", "gpui"]

[[example]]
name = "image_loading"
required-features = ["wgpu"]

[[example]]
name = "image_utils"
required-features = ["wgpu"]

[[example]]
name = "kmeans_clustering"
required-features = ["wgpu"]

[[example]]
name = "morphology"
required-features = ["wgpu"]

[[example]]
name = "ocr"
required-features = ["wgpu"]

[[example]]
name = "onnx_inference"
required-features = ["wgpu"]

[[example]]
name = "optical_flow"
required-features = ["wgpu"]

[[example]]
name = "photo_processing"
required-features = ["wgpu"]

[[example]]
name = "qr_detection"
required-features = ["wgpu"]

[[example]]
name = "safetensors_loading"
required-features = ["wgpu", "safetensors"]

[[example]]
name = "segmentation"
required-features = ["wgpu"]

[[example]]
name = "stitching"
required-features = ["wgpu"]

[[example]]
name = "threshold"
required-features = ["wgpu"]

[[example]]
name = "tracking"
required-features = ["wgpu"]

[[example]]
name = "video_processing"
required-features = ["wgpu"]

[[example]]
name = "gif_video"
required-features = ["wgpu"]

[[example]]
name = "image_sequence"
required-features = ["wgpu"]

[[example]]
name = "video_metadata"
required-features = ["wgpu"]

[[example]]
name = "video_frame_ops"
required-features = ["wgpu"]

[[example]]
name = "generate_assets"
required-features = ["wgpu"]
